# LoLFriendsNotifier

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  build.rs
.github/workflows/: release.yml
src/: client.rs  consts.rs  gui.rs  main.rs  threads.rs
