[package]
name = "lolfriendsnotifier"
version = "1.0.0"
authors = ["Guido30"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Guido30/LoLFriendsNotifier"

[dependencies]
rodio = "0.21.1"
eframe = { version = "0.32.2", features = ["persistence"] }
serde = "1.0.219"
egui_extras = { version = "0.32.1", features = ["svg"] }
notify-rust = "4.11.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
lolclientapi_rs = { version = "*", git = "https://github.com/Guido30/LoLClientApi-RS" }

[[bin]]
name = "Friends-Notifier"
path = "src/main.rs"
